--- a/CRM/Window2.xaml
+++ b/CRM/Window2.xaml
@@ -1,22 +1,70 @@
 ﻿<Window x:Class="CRM.Window2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window2" Height="300" Width="300">
-    <Grid ShowGridLines="True">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Label Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Title" />
-        <Label Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Content="Firstname:" Margin="10" />
-        <TextBox Grid.Column="1" Grid.Row="1" Width="100" Height="30" />
-        <Label Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Content="Lastname:" Margin="10" />
-        <TextBox Grid.Column="1" Grid.Row="2" Width="100" Height="30" />
+        Title="CRM system" Height="604" Width="1069" WindowStartupLocation="CenterScreen">
 
-    </Grid>
+    <DockPanel Grid.Column="1" Grid.ColumnSpan="2">
+        <Border Height="25" Background="AliceBlue" DockPanel.Dock="Top">
+            <TextBlock>Menu</TextBlock>
+        </Border>
+        <Border Height="25" Background="Aqua" DockPanel.Dock="Top">
+            <TextBlock Background="#FFECF1F1">Toolbar</TextBlock>
+        </Border>
+        <Border Height="30" Background="LightSteelBlue" DockPanel.Dock="Bottom">
+            <TextBlock Background="#FFE8F0E6">Status</TextBlock>
+        </Border>
+        <Border Height="80" Background="Azure" DockPanel.Dock="Right">
+            <TextBlock>Right Side</TextBlock>
+        </Border>
+        <Border Background="#FFEAE0E5">
+            <Grid RenderTransformOrigin="0.313,0.475">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60" MinWidth="60" MaxWidth="135"></ColumnDefinition>
+                    <ColumnDefinition Width="10"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <WrapPanel Grid.Row="1" MinWidth="60">
+                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                    <Button Width="50" Height="50"  Margin="5">Button</Button>
+                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                </WrapPanel>
+                <TabControl Grid.Column="2" HorizontalAlignment="Left" Height="473" Margin="10,10,0,0" VerticalAlignment="Top" Width="927">
+                    <TabItem Header="Today" Margin="-2,-2,-2,2">
+                        <ListBox Name="lbTaskToday">
+                            <!--<TextBlock FontWeight="Bold" TextDecorations="Underline" Text="Today Tasks" />-->
+                            <ListBoxItem Background="LightGray">LG Nexus 5X</ListBoxItem>
+                            <ListBoxItem>Huawei Nexus 6P</ListBoxItem>
+                            <ListBoxItem Background="LightGray">iPhone 6S</ListBoxItem>
+                            <ListBoxItem>iPhone 6S Plus</ListBoxItem>
+                            <ListBoxItem Background="LightGray">Аsus Zenphone 2</ListBoxItem>
+                            <ListBoxItem>Microsoft Lumia 950</ListBoxItem>
+                        </ListBox>
+
+                    </TabItem>
+                    <TabItem Header="Week">
+                        <Grid Background="#FFE5E5E5"/>
+                    </TabItem>
+                    <TabItem Header="Month">
+                        <Grid Background="#FFE5E5E5"/>
+
+                    </TabItem>
+                    <TabItem Header="Year">
+                        <Grid Background="#FFE5E5E5"/>
+                    </TabItem>
+                </TabControl>
+
+                <GridSplitter Grid.Row="0" Grid.Column="1" Grid.RowSpan="5" Width="5" Background= "#FFC3C7BC" 
+                      VerticalAlignment="Stretch" HorizontalAlignment="Center"></GridSplitter>
+            </Grid>
+        </Border>
+    </DockPanel>
+
 </Window>
