--- a/CRM/Window2.xaml
+++ b/CRM/Window2.xaml
@@ -1,24 +1,6 @@
 ﻿<Window x:Class="CRM.Window2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-<<<<<<< HEAD
-        Title="Window2" Height="604" Width="1069" WindowStartupLocation="CenterScreen">
-    
-        <DockPanel Grid.Column="1" Grid.ColumnSpan="2">
-            <Border Height="25" Background="AliceBlue" DockPanel.Dock="Top">
-                <TextBlock>Menu</TextBlock>
-            </Border>
-            <Border Height="25" Background="Aqua" DockPanel.Dock="Top">
-                <TextBlock Background="#FFECF1F1">Toolbar</TextBlock>
-            </Border>
-            <Border Height="30" Background="LightSteelBlue" DockPanel.Dock="Bottom">
-                <TextBlock Background="#FFE8F0E6">Status</TextBlock>
-            </Border>
-            <Border Height="80" Background="Azure" DockPanel.Dock="Right">
-                <TextBlock>Right Side</TextBlock>
-            </Border>
-            <Border Background="#FFEAE0E5">
-=======
         Title="CRM system" Height="604" Width="1069" WindowStartupLocation="CenterScreen">
 
     <DockPanel Grid.Column="1" Grid.ColumnSpan="2">
@@ -26,7 +8,9 @@
             <TextBlock>Menu</TextBlock>
         </Border>
         <Border Height="25" Background="Aqua" DockPanel.Dock="Top">
-            <TextBlock Background="#FFECF1F1">Toolbar</TextBlock>
+            <TextBlock Background="#FFECF1F1"><Run Text="Toolbar"/><InlineUIContainer>
+            		<ToolBar/>
+            	</InlineUIContainer></TextBlock>
         </Border>
         <Border Height="30" Background="LightSteelBlue" DockPanel.Dock="Bottom">
             <TextBlock Background="#FFE8F0E6">Status</TextBlock>
@@ -34,38 +18,49 @@
         <Border Height="80" Background="Azure" DockPanel.Dock="Right">
             <TextBlock>Right Side</TextBlock>
         </Border>
-        <Border Background="#FFEAE0E5">
->>>>>>> 21c798a9050cceb9265f00b3a1d45a912150d62e
+        <Border Background="#FFFFFF">
             <Grid RenderTransformOrigin="0.313,0.475">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="60" MinWidth="60" MaxWidth="135"></ColumnDefinition>
+                    <ColumnDefinition Width="160" MinWidth="160" MaxWidth="330"></ColumnDefinition>
                     <ColumnDefinition Width="10"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <WrapPanel Grid.Row="1" MinWidth="60">
-                    <Button Width="50" Height="50" Margin="5">Button</Button>
-                    <Button Width="50" Height="50" Margin="5">Button</Button>
-                    <Button Width="50" Height="50" Margin="5">Button</Button>
-                    <Button Width="50" Height="50" Margin="5">Button</Button>
-                    <Button Width="50" Height="50"  Margin="5">Button</Button>
-                    <Button Width="50" Height="50" Margin="5">Button</Button>
-                    <Button Width="50" Height="50" Margin="5">Button</Button>
-                    <Button Width="50" Height="50" Margin="5">Button</Button>
+                    <Button Width="131" Height="50" Margin="5" Background="Transparent" BorderBrush="Transparent">
+                        <StackPanel Orientation="Horizontal" Width="121">
+                            <Image Source="Pictures/contacts3.jpg" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 " />
+                            <TextBlock Text="Contacts" VerticalAlignment="Center" HorizontalAlignment="Right" Width="59" />
+                        </StackPanel>
+                    </Button>
+                    <Button Width="120" Height="50" Margin="5" BorderBrush="White" Background="White">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Pictures/clients2.png" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
+                            <TextBlock Text="Clients" VerticalAlignment="Center" HorizontalAlignment="Right" />
+                        </StackPanel>
+                    </Button>
+                    <Button Width="120" Height="50" Margin="5" BorderBrush="White" Background="White">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Pictures/contracts.png" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
+                            <TextBlock Text="Contracts" VerticalAlignment="Center" HorizontalAlignment="Right" />
+                        </StackPanel>
+                    </Button>
+                    <Button Width="120" Height="50" Margin="5" BorderBrush="White" Background="White">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Pictures/clients.jpg" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
+                            <TextBlock Text="Activites" VerticalAlignment="Center" HorizontalAlignment="Right" />
+                        </StackPanel>
+                    </Button>
+                    <Button Width="120" Height="50" Margin="5" BorderBrush="White" Background="White">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Pictures/clients.jpg" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
+                            <TextBlock Text="Calendar" VerticalAlignment="Center" HorizontalAlignment="Right" />
+                        </StackPanel>
+                    </Button>
                 </WrapPanel>
-<<<<<<< HEAD
-                <Button Grid.Row="1" Grid.Column="2">Button4</Button>
-
-                <GridSplitter Grid.Row="0" Grid.Column="1" Grid.RowSpan="5" Width="5" Background= "#FFC3C7BC" 
-                      VerticalAlignment="Stretch" HorizontalAlignment="Center"></GridSplitter>
-            </Grid>
-        </Border>
-        </DockPanel>
-        
-=======
-                <TabControl Grid.Column="2" HorizontalAlignment="Left" Height="473" Margin="10,10,0,0" VerticalAlignment="Top" Width="927">
+                <TabControl Grid.Column="2" HorizontalAlignment="Left" Height="473" Margin="10,10,0,0" VerticalAlignment="Top" Width="850">
                     <TabItem Header="Today" Margin="-2,-2,-2,2">
                         <ListBox Name="lbTaskToday">
                             <!--<TextBlock FontWeight="Bold" TextDecorations="Underline" Text="Today Tasks" />-->
@@ -96,5 +91,4 @@
         </Border>
     </DockPanel>
 
->>>>>>> 21c798a9050cceb9265f00b3a1d45a912150d62e
 </Window>
