--- a/CRM/Window2.xaml
+++ b/CRM/Window2.xaml
@@ -2,6 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="CRM system" Height="604" Width="1069" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <BitmapImage x:Key="ImageSource1" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="C:\Users\ipd\Documents\CRMSystemProject\CRM\Pictures\contacts3.jpg"/>
+        <BitmapImage x:Key="ImageSource2" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="C:\Users\ipd\Documents\CRMSystemProject\CRM\Pictures\contacts3.jpg"/>
+        <BitmapImage x:Key="ImageSource3" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="C:\Users\ipd\Documents\CRMSystemProject\CRM\Pictures\clients2.png"/>
+        <BitmapImage x:Key="ImageSource4" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="C:\Users\ipd\Documents\CRMSystemProject\CRM\Pictures\contracts.png"/>
+    </Window.Resources>
 
     <DockPanel Grid.Column="1" Grid.ColumnSpan="2">
         <Border Height="25" Background="AliceBlue" DockPanel.Dock="Top">
@@ -31,19 +37,19 @@
                 <WrapPanel Grid.Row="1" MinWidth="60">
                     <Button Width="131" Height="50" Margin="5" Background="Transparent" BorderBrush="Transparent">
                         <StackPanel Orientation="Horizontal" Width="121">
-                            <Image Source="Pictures/contacts3.jpg" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 " />
+                            <Image Source="{DynamicResource ImageSource2}" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 " />
                             <TextBlock Text="Contacts" VerticalAlignment="Center" HorizontalAlignment="Right" Width="59" />
                         </StackPanel>
                     </Button>
                     <Button Width="120" Height="50" Margin="5" BorderBrush="White" Background="White">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="Pictures/clients2.png" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
+                            <Image Source="{DynamicResource ImageSource3}" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
                             <TextBlock Text="Clients" VerticalAlignment="Center" HorizontalAlignment="Right" />
                         </StackPanel>
                     </Button>
                     <Button Width="120" Height="50" Margin="5" BorderBrush="White" Background="White">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="Pictures/contracts.png" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
+                            <Image Source="{DynamicResource ImageSource4}" Width="40" Height="40" HorizontalAlignment="Left" Margin="0 0 20 0 "/>
                             <TextBlock Text="Contracts" VerticalAlignment="Center" HorizontalAlignment="Right" />
                         </StackPanel>
                     </Button>
@@ -60,31 +66,17 @@
                         </StackPanel>
                     </Button>
                 </WrapPanel>
-                <TabControl Grid.Column="2" HorizontalAlignment="Left" Height="473" Margin="10,10,0,0" VerticalAlignment="Top" Width="850">
-                    <TabItem Header="Today" Margin="-2,-2,-2,2">
-                        <ListBox Name="lbTaskToday">
-                            <!--<TextBlock FontWeight="Bold" TextDecorations="Underline" Text="Today Tasks" />-->
-                            <ListBoxItem Background="LightGray">LG Nexus 5X</ListBoxItem>
-                            <ListBoxItem>Huawei Nexus 6P</ListBoxItem>
-                            <ListBoxItem Background="LightGray">iPhone 6S</ListBoxItem>
-                            <ListBoxItem>iPhone 6S Plus</ListBoxItem>
-                            <ListBoxItem Background="LightGray">Аsus Zenphone 2</ListBoxItem>
-                            <ListBoxItem>Microsoft Lumia 950</ListBoxItem>
-                        </ListBox>
-
-                    </TabItem>
-                    <TabItem Header="Week">
-                        <Grid Background="#FFE5E5E5"/>
-                    </TabItem>
-                    <TabItem Header="Month">
-                        <Grid Background="#FFE5E5E5"/>
-
-                    </TabItem>
-                    <TabItem Header="Year">
-                        <Grid Background="#FFE5E5E5"/>
-                    </TabItem>
-                </TabControl>
-
+                <WrapPanel Grid.Row="1" Grid.Column="3" MinWidth="160">
+                    <StackPanel Orientation="Horizontal" Width="661" Height="50" Background="LightGray" >
+                        <TextBlock Text="Current Tasks" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16" />
+                        <Button>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="{DynamicResource ImageSource1}" Width="50" Height="50" />
+                                <TextBlock Margin="5,0,0,0">Add</TextBlock>
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+                </WrapPanel>
                 <GridSplitter Grid.Row="0" Grid.Column="1" Grid.RowSpan="5" Width="5" Background= "#FFC3C7BC" 
                       VerticalAlignment="Stretch" HorizontalAlignment="Center"></GridSplitter>
             </Grid>
