--- a/CRM/MainWindow.xaml
+++ b/CRM/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Company name CRM system" Height="170.267" Width="313.62" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="106,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="106,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168"/>
+        <TextBox x:Name="tbUserName" HorizontalAlignment="Left" Height="23" Margin="106,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="11,15,0,0" VerticalAlignment="Top"/>
         <Label Content="Passowrd" HorizontalAlignment="Left" Margin="11,47,0,0" VerticalAlignment="Top"/>
-        <Button Content="ENTER" HorizontalAlignment="Left" Margin="106,90,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        
+        <Button x:Name="btEnter" Content="ENTER" HorizontalAlignment="Left" Margin="106,90,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <PasswordBox x:Name="pbPsw" HorizontalAlignment="Left" Margin="106,49,0,0" VerticalAlignment="Top" Width="168" Height="24"/>
+
     </Grid>
 </Window>
