--- a/CRM/MainWindow.xaml
+++ b/CRM/MainWindow.xaml
@@ -5,7 +5,7 @@
     <Grid>
         <TextBox x:Name="tbUserName" HorizontalAlignment="Left" Height="23" Margin="106,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="11,15,0,0" VerticalAlignment="Top"/>
-        <Label Content="Passowrd" HorizontalAlignment="Left" Margin="11,47,0,0" VerticalAlignment="Top"/>
+        <Label Content="Password" HorizontalAlignment="Left" Margin="11,47,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btEnter" Content="ENTER" HorizontalAlignment="Left" Margin="106,90,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <PasswordBox x:Name="pbPsw" HorizontalAlignment="Left" Margin="106,49,0,0" VerticalAlignment="Top" Width="168" Height="24"/>
 
